Refactor project structure by moving icons to an 'assets/icons' directory and adding promotional images. Update references in all relevant files to reflect the new paths, ensuring consistency across the project.

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>
-      <img src="icons/icon32.png" alt="Y2W" class="logo">
+      <img src="assets/icons/icon32.png" alt="Y2W" class="logo">
       Y2W Settings
     </h1>
     
