--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,25 @@
         <input type="text" id="roomKey" name="roomKey" placeholder="Leave empty to create new rooms">
         <div class="help-text">If provided, tries to use existing room (must be member)</div>
       </div>
-      
+
+      <div class="form-group">
+        <label class="toggle-label">
+          <span class="toggle-text">Auto-sync room from W2G URLs</span>
+          <input type="checkbox" id="autoSync" class="toggle-checkbox">
+          <span class="toggle-switch"></span>
+        </label>
+        <div class="help-text">Automatically extract room ID when visiting W2G URLs</div>
+      </div>
+
+      <div class="form-group">
+        <label class="toggle-label">
+          <span class="toggle-text">Auto-copy room URL</span>
+          <input type="checkbox" id="autoCopy" class="toggle-checkbox">
+          <span class="toggle-switch"></span>
+        </label>
+        <div class="help-text">Copy room URL to clipboard when video is added</div>
+      </div>
+
       <div class="button-group">
         <button type="submit" class="save-btn">Save Settings</button>
       </div>
